Fix too large padding-top

--- a/packages/bemuse/src/app/components/music-select-scene.module.scss
+++ b/packages/bemuse/src/app/components/music-select-scene.module.scss
@@ -65,7 +65,7 @@
 
   & > * {
     overflow-y: scroll;
-    padding-top: 10rem;
+    padding-top: 3rem;
     padding-bottom: 3rem;
   }
 }
